<resources>
    <string name="app_name">RACALOGIN</string>
    <string name="txt_id">Ingrese su código</string>
    <string name="txt_pwd"> Ingrese su Contraseña</string>
    <string name="btn_Login">Iniciar sesión</string>
    <string name="lv_registrar">Registrate aquí</string>
    <string name="a_n_no_estas_registrado">¿Aún no estas registrado?</string>
    <string name="logo_RACA">RACA AGK v1.0</string>
    <string name="txt_nombres">Ingrese sus nombres</string>
    <string name="txt_apellidos">Ingrese sus apellidos</string>
    <string name="txt_celular">Ingrese su numero de celular</string>
    <string name="txt_email">Ingrese su correo</string>
    <string name="btn_registro">Registrar</string>
    <string name="lv_registrado">¿Ya estás registrado?</string>
    <string name="lv_login">Inicia sesión aquí</string>
    <string name="registrado">"¿No estás registrado? "</string>
    <string name="title_activity_menudeusuario">Menudeusuario</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="btn_logout">Cerrar sesión</string>
    <string name="tv_registrarsalida">REGISTRAR SALIDA</string>
    <string name="btn_mostralout">TODO</string>
    <string name="logoutascii">➲</string>
    <string name="cargandonombres">Cargando Datos.....</string>
    <string name="cargandocodigo">Cargando codigo....</string>
    <string name="TV_HORAEXTRA">Horas extras:</string>
    <string name="TV_HORAEXTRAPAGADAS">Horas compensadas:</string>
    <string name="TV_HORASTOTALES">Horas Totales:</string>
    <string name="cargando_horasextras">Cargando Horas....</string>
    <string name="INGRESEHORA">HORAS</string>
    <string name="INGRESEMINUTOS">MINUTOS</string>
    <string name="separadorhoras">:</string>
    <string name="asciiconfirmacion">✚</string>
    <string name="turnonoche">NOCHE</string>
    <string name="formatofechahint">dd/mm/aaaa</string>
    <string name="cargandofecha">Cargando salidas...</string>
    <string name="cargandohorasextras">Cargando horas extras...</string>
    <string name="btn_salidsa">Mostrar salidas</string>
    <string name="txobservaciones">Agrege sus observaciones...</string>
    <string name="semana">SEMANA:</string>
    <string name="n_semana">Nº Semana</string>
    <string name="iconocbuscar">🔍</string>
    <string name="string_iconocbuscar">🔍</string>
    <string name="horas_semanales">Horas Semanales</string>
    <string name="eliminar">ELIMINAR</string>

</resources>