<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".register">

    <ScrollView
        android:layout_width="413dp"
        android:layout_height="747dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="50dp"
                android:text="@string/logo_RACA"
                android:textColor="#00897B"
                android:textSize="60sp" />

            <EditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/txt_id"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/txt_nombres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/txt_nombres"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/txt_apellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/txt_apellidos"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/txt_celular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/txt_celular"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/txt_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/txt_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/txt_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/txt_pwd"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck,TextContrastCheck" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:minHeight="48dp"
                android:text="@string/btn_registro"
                android:textColor="#FFFFFF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:padding="3dp"
                    android:text="@string/lv_registrado" />

                <TextView
                    android:id="@+id/tv_iralogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center|start"
                    android:text="@string/lv_login"
                    android:textColor="#00838F"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>