<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".salidas">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="383dp"
        android:layout_height="789dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:paddingBottom="30dp"
            android:text="@string/horas_semanales"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txt_fechamin"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/formatofechahint"
                android:importantForAutofill="no"
                android:inputType="date"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

            <EditText
                android:id="@+id/txt_fechamax"
                android:layout_width="129dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/formatofechahint"
                android:importantForAutofill="no"
                android:inputType="date"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_buscarsem"
                android:layout_width="98dp"
                android:layout_height="66dp"
                android:text="@string/string_iconocbuscar"
                android:textSize="20sp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rec_salidas"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>