<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#FFFFFF"
    android:padding="5dp"
    tools:context=".Datosusuario">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="412dp"
        android:layout_height="148dp"
        android:gravity="start"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_codigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#43A047"
            android:gravity="center"
            android:hint="@string/cargandocodigo"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00897B"
            android:backgroundTint="#00897B"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_apellidos"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/cargandonombres"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:width="200dp"
                android:background="#00FFFFFF"
                android:minHeight="48dp"
                android:text="@string/logoutascii"
                android:textSize="29sp"
                android:visibility="visible" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_mostrarsalidas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_salidsa" />

    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_addsalida"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.recyclerview.widget.RecyclerView>

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Guardar" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>